# ProfDash

./: .env.example  .gitignore  CLAUDE.md  DEBUG_BOARD_TASKS.md  FEATURES.md  QUICK_FIX.md  README.md  package.json
bug-bash-reports/: ai-agents.md  ai-and-agents.md  auth-and-collaboration.md  auth-middleware.md  auth-workspaces.md  calendar.md  collab-ux.md  collaboration.md  grants-and-publications.md  grants-publications.md  grants-pubs-shared.md  plan.md  projects-and-hierarchy.md  projects-research.md  projects.md  research.md  shared-and-utils.md  summary.md  tasks-and-views.md  tasks-core.md  tasks.md
docs/: API.md  (+19 more)
scholaros/services/ai/: .env.example  pyproject.toml  requirements.txt
scholaros/services/ai/app/: __init__.py  config.py  main.py
scholaros/services/ai/app/agents/: __init__.py  base.py  orchestrator.py  registry.py  types.py
scholaros/services/ai/app/agents/specialized/: __init__.py  calendar_agent.py  grant_agent.py  personnel_agent.py  planner_agent.py  project_agent.py  research_agent.py  task_agent.py  writing_agent.py
scholaros/services/ai/app/analytics/: __init__.py  ab_testing.py  onboarding.py  validation.py
scholaros/services/ai/app/ml/: __init__.py
scholaros/services/ai/app/ml/models/: __init__.py  onboarding_predictor.py  search_ranker.py
scholaros/services/ai/app/models/: schemas.py
scholaros/services/ai/app/routers/: agents.py  analytics.py  documents.py  extract.py  grants.py  summarize.py
scholaros/services/ai/app/services/: llm.py
scholaros/services/ai/tests/: __init__.py  test_analytics.py  test_ml_models.py
(+448 files in other folders)
